# screen-timeline-recorder

./: .gitignore  Cargo.toml  LICENSE  README.md  tauri.conf.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-13-screen-timeline-recorder.md  2026-04-14-desktop-shell-plan.md  2026-04-14-narrow-viewer-responsive-plan.md  2026-04-15-video-segment-recorder.md
docs/superpowers/specs/: 2026-04-13-screen-timeline-recorder-design.md  2026-04-14-narrow-viewer-responsive-design.md
scripts/: fetch-ffmpeg.ps1  package-desktop.ps1  soak.ps1
src/: autostart.rs  burn_in.rs  cli.rs  config.rs  desktop.rs  diff.rs  dpi.rs  frame.rs  index.rs  lib.rs  logging.rs  main.rs  reconstruct.rs  recorder.rs  recording_guard.rs  recording_settings.rs  recording_stats.rs  retention.rs  session.rs  session_control.rs  storage.rs  video_recorder.rs  video_session.rs  viewer_api.rs  viewer_server.rs
src/capture/: mock.rs  mod.rs  windows.rs
tests/: burn_in_tests.rs  cli_tests.rs  config_tests.rs  diff_tests.rs  frame_tests.rs  reconstruct_tests.rs  record_command_tests.rs  recorder_loop_tests.rs  recording_settings_tests.rs  resilience_tests.rs  retention_tests.rs  session_control_tests.rs  storage_tests.rs  video_recorder_tests.rs  video_session_tests.rs  viewer_api_tests.rs  viewer_api_video_tests.rs  viewer_server_tests.rs  windows_capture_tests.rs
viewer/: api_client.js  app.js  control_logic.js  control_logic.test.js  formatters.js  i18n.js  index.html  session_list_logic.js  session_list_logic.test.js  styles.css  video_playback_logic.js  video_playback_logic.test.js  video_player.js  video_player.test.mjs  viewer_app.js
