[package]
name = "screen-timeline-recorder"
version = "0.1.0"
edition = "2024"
description = "Windows-first screen recorder with local viewer, tray controls, autostart, and ffmpeg-based video segments."
license = "MIT"
repository = "https://github.com/CHENJIAMIAN/screen-timeline-recorder"
homepage = "https://github.com/CHENJIAMIAN/screen-timeline-recorder"

[package.metadata.tauri-winres]
FileDescription = "Screen Timeline Recorder"
OriginalFilename = "screen-timeline-recorder.exe"
ProductName = "Screen Timeline Recorder"

[lib]
name = "screen_timeline_recorder"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ctrlc = "3.4"
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
toml = "0.8"
trash = "5.2"

[dev-dependencies]
tempfile = "3.13"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[target.'cfg(windows)'.dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico"] }
tauri-plugin-global-shortcut = "2.3.1"
windows = { version = "0.57", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Graphics_Gdi", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
