[package]
name = "screen-timeline-recorder"
version = "0.1.1"
edition = "2024"
description = "Windows-first screen recorder with local viewer, tray controls, autostart, and ffmpeg-based video segments."
license = "MIT"
repository = "https://github.com/CHENJIAMIAN/screen-timeline-recorder"
homepage = "https://github.com/CHENJIAMIAN/screen-timeline-recorder"

[package.metadata.tauri-winres]
FileDescription = "Screen Timeline Recorder"
OriginalFilename = "screen-timeline-recorder.exe"
ProductName = "Screen Timeline Recorder"

[lib]
name = "screen_timeline_recorder"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
toml = "0.8"
trash = "5.2"

[dev-dependencies]
tempfile = "3.13"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[target.'cfg(windows)'.dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico"] }
tauri-plugin-global-shortcut = "2.3.1"
windows = { version = "0.57", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_System_Power", "Win32_System_RemoteDesktop", "Win32_System_StationsAndDesktops", "Win32_System_SystemServices", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
